# COGANT

./: .coverage  .coverage.timelock.local.79022.XMiVpPQx  .coverage.timelock.local.79030.XfGgFHPx  .coverage.timelock.local.79033.XtTEtOTx  .coverage.timelock.local.79037.XAeaxuxx  .coverage.timelock.local.79039.Xjpymqex  .coverage.timelock.local.79044.XEFAINXx  .coverage.timelock.local.79051.XNIsgEvx  .coverage.timelock.local.79053.XdCzbjWx  .coverage.timelock.local.79055.XKEufCKx  .coverage.timelock.local.86869.XfyquWKx  .gitignore  .gitmodules  .zenodo.json  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  ISA.md  PROMOTION.md  README.md  THERMO_NUCLEAR_REVIEW.md  TODO.md  fix_links.py  index.html  objects.inv  playground.html  pyproject.toml  run_all.example.json  run_all.json  run_all.py  run_all.sh  tasks.yaml
cogant/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSES.md  Makefile  README.md  cogant.yaml  coverage.json  docker-compose.yml  mkdocs.yml  pyproject.toml
cogant/.github/: AGENTS.md  CODEOWNERS  README.md
cogant/.github/workflows/: AGENTS.md  README.md  docs.yml
cogant/_rnd/sweep_2026_04/: FUNCTIONAL_VERIFICATION_REPORT.md  REVIEW_REPORT.md  api_signature_validation.md  apply_skip_markers.py  benchmark_refresh_result.md  block_catalog.json  block_results.json  cli_validation.md  cluster_failures.py  coherence_narrative_audit.md  coherence_terminology_audit.md  coherence_version_audit.md  crosslink_api_audit.md  crosslink_concepts_audit.md  crosslink_rnd_audit.md  crosslink_tutorials_audit.md  example_validation.md  extract_blocks.py  link_validation.md  manuscript_number_audit.md  mutation_testing_result.md  mutation_wave20.md  nav_rebuild_audit.md  run_blocks.py  signposting_headers_audit.md  signposting_index_audit.md  signposting_nav_audit.md  site_build_validation.md  tutorial_validation.md
cogant/benchmarks/: AGENTS.md  README.md  bench_graph_build.py  bench_ingest.py  bench_perf_regression.py  bench_suite.py  perf_baseline.json  rust_vs_python.py
cogant/benchmarks/results/: AGENTS.md  README.md  suite_20260409.json  suite_20260409.md  suite_20260423.md
cogant/docs/: AGENTS.md  CI.md  README.md  changelog.md  cli_reference.md  faq.md  fix_links.py  index.md  playground.html  playground.md  split_docs.py  verify_doc_links.py  verify_manuscript_links.py
cogant/docs/api/: AGENTS.md  README.md  api_stability.md  bundle_api.md  complete_example.md  confidence_model_api.md  debugging.md  dynamic_analysis_api.md  dynamic_enrichment_api.md  error_handling.md  export_stage_and_gnn_package.md  fixpoint_translation_api.md  gnn.md  installation.md  markov.md  overview.md  performance_tips.md  pipelinerunner_api.md  plugin_api.md  quick_start.md  reverse.md  reviewapi.md  runtime.md  scoring_api.md  see_also.md  server.md  session_api.md  simulate.md  statespace.md  static.md  translate.md  visualization_api.md
cogant/docs/architecture/: .md  1_normalize.md  2_build_graph.md  3_translate.md  4_score.md  5_review.md  6_export.md  AGENTS.md  README.md  accept.md  access_results.md  add_edge.md  add_edges_from_analysis_results.md  add_for_review.md  add_nodes.md  analyze.md  analyze_data_flow.md  analyze_file.md  analyze_imports.md  analyze_source.md  audit.md  averageconfidence_xxx.md  build_call_graph.md  centrality.md  cogant_engine_implementation_summary.md  cogant_graph_construction_normalization_and_translation_engine.md  cogant_ingest_and_static_analysis_pipeline.md  cogant_pipeline_index.md  component_details.md  components_and_cycles.md  concurrency_parallelism.md  configuration_system.md  convert_to_node.md  data_flow.md  dependencies.md  detailed_graph_engine.md  detailed_pipeline_guide.md  enumerate_all_source_files.md  error_handling.md  export.md  (+63 more)
cogant/docs/cli/: AGENTS.md  README.md  api_reference.md  command_index.md  commands.md  configuration_file.md  environment_variables.md  installation.md  output_files.md  overview.md  quick_start.md  see_also.md  support.md  troubleshooting.md  usage_examples.md
cogant/docs/concepts/: AGENTS.md  README.md  active_inference.md  gnn.md  markov_blanket.md  program_graph.md  role_assignment.md  roundtrip.md
cogant/docs/cookbook/: 01_scan_basic.md  02_json_output.md  03_explain_node.md  04_custom_threshold.md  05_multi_project.md  06_reverse_basic.md  07_reverse_custom.md  08_ci_integration.md  09_precommit_hook.md  10_docker.md  11_javascript.md  12_batch_scan.md  13_incremental.md  14_gnn_validation.md  15_markov_blanket.md  16_png_figures.md  17_benchmark.md  18_role_filter.md  19_extend_rules.md  20_dataset.md  AGENTS.md  README.md  analyze_a_flask_app.md  custom_translation_rules.md  interpret_gnn_output.md
cogant/docs/evaluation/: ACTIVE_INFERENCE_MAPPING.md  AGENTS.md  BENCHMARK_VS_PRIOR.md  CALIBRATION.md  CODE_QUALITY_AUDIT.md  CONSTRAINT_FIX.md  CROSS_LANG_ROUNDTRIP.md  EMPIRICAL_CLAIM.md  FINAL_REPORT.md  FIRST_INFERENCE.md  GNN_V2_AUDIT_SURFACE.md  GNN_VALIDATION_REPORT.md  INCREMENTAL_BENCHMARK.md  ISOMORPHISM_THEOREM.md  LITERATURE.md  MUTATION_REPORT.md  R&D_LOG.md  README.md  REAL_WORLD_EVAL.md  RELATED_WORK.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.5.0.md  ROUNDTRIP_EVAL.md  ROUNDTRIP_IMPROVEMENT.md  ROUNDTRIP_VALIDATION.md  SCALING_ANALYSIS.md  SCOPING_REPORT.md  V1.0_READINESS.md
cogant/docs/rnd/: AGENTS.md  (+4 more)
cogant/evaluation/: AGENTS.md  METRICS.yaml  README.md  real_world_eval_results.json  real_world_eval_summary.json  run_eval.py
cogant/examples/: AGENTS.md  README.md  demo_notebook.ipynb  demo_server.py  example_pipeline.py  orchestrate_roundtrip.py  run_diff.py  test_drift_metrics.py
cogant/mutants/: pyproject.toml
cogant/parsers/: AGENTS.md  README.md  __init__.py  _base.py
cogant/py/: AGENTS.md  README.md  cogant.pyi  requirements.txt
cogant/rust/: AGENTS.md  Cargo.toml  README.md  RUST_SETUP.md
cogant/scripts/: AGENTS.md  README.md  empirical_claim_demo.py  split_cli_main.py  split_png_export.py
cogant/specs/: AGENTS.md  README.md
cogant/tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_engine.py
(+2772 files in other folders)
