[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogant"
version = "0.2.0rc1"
description = "Codebase-to-GNN Translation Engine: translate software repositories into Generalized Notation Notation (Active Inference Institute) state-space and process-model representations"
authors = [
    {name = "COGANT Contributors", email = "contributors@cogant.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["code analysis", "generalized notation notation", "active inference", "program synthesis", "codebase analysis", "state-space model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "networkx>=3.0",
    "pyarrow>=14.0",
    "duckdb>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
viz = [
    "plotly>=5.17.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.8.0",
]
multilang = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "plotly>=5.17.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.8.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]

[project.scripts]
cogant = "cogant.cli.main:app"

[tool.setuptools]
package-dir = {"" = "py"}

[tool.setuptools.packages]
find = {where = ["py"]}

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=cogant",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=75",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_rust: Tests that require Rust bindings",
    "fuzz: Hypothesis-based fuzz / property tests",
    "property: Hypothesis property-based correctness law tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
extend-ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["cogant"]
known-third-party = ["pydantic", "typer", "rich", "networkx", "pyarrow", "duckdb"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pyarrow.*",
    "duckdb.*",
    "typer.*",
    "matplotlib.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "cairosvg.*",
    "numpy.*",
    "cogant._rust",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
parallel = true
source = ["cogant"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.12",
    "mutmut>=3.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]
