[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogant"
version = "0.6.0"
description = "Codebase-to-GNN Translation Engine: translate software repositories into Generalized Notation Notation (Active Inference Institute) state-space and process-model representations"
authors = [
    {name = "COGANT Contributors", email = "contributors@cogant.dev"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["code analysis", "generalized notation notation", "active inference", "program synthesis", "codebase analysis", "state-space model"]
classifiers = [
    # Beta reflects v0.6.0 maturity: 211 source files, ~9.6k tests at 94.98%
    # coverage, mypy --strict clean, a 30-section manuscript with audited
    # claims, and a demonstration FastAPI/Docker surface. The "production"
    # framing is intentionally NOT used in package or manuscript prose —
    # see manuscript §10 Capability 14 and cogant/docs/security/README.md
    # for the documented untrusted-input boundary.
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "networkx>=3.0",
    "pyarrow>=14.0",
    "duckdb>=0.9",
    "fastapi>=0.135.3",
    "httpx>=0.27",
    "numpy>=2.4.4",
    # Active Inference Institute reference GNN toolkit (import path: src.gnn).
    #
    # **Install-time prerequisites** (RedTeam F39, 2026-05-20):
    # this dependency is a pinned git revision, NOT a PyPI release, so
    # ``pip install cogant`` (or ``uv sync``) **requires git installed and
    # network access to github.com at install time**. CI/sandbox environments
    # without git or outbound network will fail with a fetch error. Vendoring
    # or an upstream PyPI release is tracked as future work; meanwhile the
    # pinned SHA gives reproducible installs and the CC-BY-NC-SA-4.0 license
    # implications for redistribution are documented in ``cogant/README.md``.
    "generalized-notation-notation @ git+https://github.com/ActiveInferenceInstitute/GeneralizedNotationNotation.git@41a64381c6d277c8240ef65499be67e7f882ef73",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "hypothesis>=6.0",
]
viz = [
    "plotly>=5.17.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.8.0",
]
multilang = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "plotly>=5.17.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.8.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
]

[project.scripts]
cogant = "cogant.cli.main:app"

[tool.setuptools]
package-dir = {"" = "py"}

[tool.setuptools.packages]
find = {where = ["py"]}

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=py/cogant",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    # Line total is computed to ~89.9–90.0%; the terminal table rounds to 90%.
    "--cov-fail-under=89",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_rust: Tests that require Rust bindings",
    "fuzz: Hypothesis-based fuzz / property tests",
    "property: Hypothesis property-based correctness law tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "examples/real_world/json_stdlib",
    "_extensions",
]

[tool.ruff.lint]
extend-select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
extend-ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Typer CLI modules intentionally use typer.Argument/typer.Option as defaults;
# that is the canonical Typer pattern and is safe (the callables produce
# parameter-info objects, not shared mutable state).
"py/cogant/cli/*.py" = ["B008"]
"py/cogant/reverse/cli.py" = ["B008"]
# Test files use sys.path manipulation before imports for editable-install fallback;
# E402 (module-level import not at top) is expected and intentional there.
"tests/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["cogant"]
known-third-party = ["pydantic", "typer", "rich", "networkx", "pyarrow", "duckdb"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
# The pydantic v2 mypy plugin gives BaseModel a real type (without it,
# BaseModel resolves to Any and every cogant.config/*.pyi + schemas/*.pyi
# class declaration fails strict-mode subclass checks).
plugins = ["pydantic.mypy"]
# The per-module overrides below are deliberately defensive — they
# guard against optional-dependency absence on minimal installs and
# against ``mypy .`` invocations that visit ``tests/``. When run only
# against ``py/cogant/`` mypy will print "unused section(s)" notes for
# overrides that did not fire; suppress that with
# ``--no-warn-unused-configs`` (CI does this; ``strict = true`` here
# leaves the rest of the strict bundle on).
warn_unused_configs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Tests intentionally use loose typing (heavy fixture/mock idioms).
# ``strict`` is enforced on ``py/cogant/`` only; this override stops
# mypy from re-analysing the test tree when invoked repo-wide.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Optional / native-extension imports that mypy may not be able to
# resolve when the dev extras are not installed. Modules listed here
# have either no PEP 561 stubs (matplotlib, the native ``cogant._rust``
# extension) or are guarded behind ``try: import ...`` blocks in the
# package. Keep the list short — entries that mypy reports as "unused
# section" should be pruned promptly to keep this file honest.
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "cogant._rust",
    # PyYAML ships no type stubs by default and pulling types-PyYAML
    # only for one line of `ablation_view.py` is more weight than the
    # signal. yaml usage here is dynamic-config glue, not type-load-bearing.
    "yaml",
]
ignore_missing_imports = true

# Upstream generalized-notation-notation (import path ``src.gnn``) has
# no stubs and is loaded lazily by ``cogant.gnn.upstream_bridge``.
[[tool.mypy.overrides]]
module = ["src.gnn", "src.gnn.*"]
ignore_missing_imports = true

[tool.coverage.run]
# Line coverage is the gate (see --cov-fail-under). Branch tracking stays useful in
# HTML reports but was tuned with line targets; combined line+branch totals sit ~2%
# below line-only on this codebase.
branch = false
parallel = true
source = ["py/cogant"]
# Tree-sitter front end is the only path excluded from the line-coverage gate.
# Rationale: it is an optional dependency (the ``multilang`` extra), the bundled
# JS/TS test fixtures exercise it via the broader pipeline (parser smoke tests
# + roundtrip golden), and the file is mostly grammar plumbing whose
# line-by-line coverage swings with tree-sitter version bumps. ``cogant/tools/``
# is now in the gate (see ``tests/unit/tools/test_tools_smoke.py``).
omit = [
    "*/cogant/static/treesitter_parser.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mutmut]
paths_to_mutate = ["py/cogant/translate/engine.py", "py/cogant/markov/blanket.py"]
tests_dir = [
    "tests/unit/test_markov.py",
    "tests/unit/test_mutation_hardening.py",
    "tests/unit/test_mutation_regressions_engine_matrices_statespace.py",
    "tests/unit/test_observation_rule_tutorial.py",
    "tests/unit/test_rule_classes.py",
    "tests/unit/test_rule_dsl.py",
    "tests/unit/test_translate_rules_behavioral.py",
    "tests/unit/test_translation_rules.py",
    "tests/unit/test_translate_markov_mutation_regression.py",
]
pytest_add_cli_args = ["-x", "-q", "--no-header", "--no-cov", "-p", "no:cacheprovider", "-o", "addopts="]

[dependency-groups]
dev = [
    "hypothesis>=6.151.12",
    "mutmut>=3.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=1.5.0",
]
