[workspace]
members = [
    "cogant-core",
    "cogant-graph",
    "cogant-translate",
    "cogant-statespace",
    "cogant-store",
    "cogant-trace",
    "cogant-gnn",
    "cogant-ffi",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["COGANT Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cogant/cogant"
homepage = "https://cogant.io"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.6", features = ["serde-1"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
