[workspace]
members = [
    "cogant-core",
    "cogant-graph",
    "cogant-translate",
    "cogant-statespace",
    "cogant-store",
    "cogant-trace",
    "cogant-gnn",
    "cogant-ffi",
]

resolver = "2"

[workspace.package]
# Intentional independent versioning: the Rust crates version separately from
# the Python package (`cogant.__version__`, currently 0.6.0). 0.1.0 reflects the
# Rust workspace's own maturity and the distributed `cogant_rust-0.1.0` wheel;
# this decoupling is deliberate, not drift.
version = "0.1.0"
edition = "2021"
authors = ["COGANT Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cogant/cogant"
homepage = "https://cogant.io"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.6", features = ["serde-1"] }
pyo3 = { version = "0.22" }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
