[package]
name = "cogant-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cogant-core = { path = "../cogant-core" }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
