[package]
name = "cogant-translate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cogant-core = { path = "../cogant-core" }
cogant-graph = { path = "../cogant-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
